--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/dariush-alipour/onecalendar/issues"
   },
-  "homepage": "https://github.com/dariush-alipour/onecalendar#readme"
+  "homepage": "https://github.com/dariush-alipour/onecalendar#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  }
 }
