--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
   "homepage": "https://github.com/dariush-alipour/onecalendar#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-react": "^6.10.3",
     "mocha": "^3.2.0"
   }
 }
