--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-react": "^6.10.3",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "onecalendar-adapter-jalali": "^1.0.3"
   }
 }
