--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint-plugin-react": "^6.10.3",
     "mocha": "^3.2.0",
     "onecalendar-adapter-jalali": "^1.0.4"
+  },
+  "dependencies": {
+    "onecalendar-core": "^1.0.0"
   }
 }
