--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/coripo/coripo-api#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "coripo-adapter-jalali": "^1.0.8",
+    "coripo-generator-menstruation": "^1.0.5",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-google": "^0.7.1",
@@ -28,8 +30,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-react": "^6.10.3",
-    "mocha": "^3.2.0",
-    "coripo-adapter-jalali": "^1.0.8"
+    "mocha": "^3.2.0"
   },
   "dependencies": {
     "coripo-core": "^1.0.6"
