--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coripo-api",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "a simple yet super-flexible calendar API",
   "main": "index.js",
   "babel": {
@@ -41,6 +41,7 @@
     "mocha": "^3.2.0"
   },
   "dependencies": {
-    "coripo-core": "^1.0.6"
+    "coripo-core": "^1.0.6",
+    "i18next": "^8.1.0"
   }
 }
